<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="eq">=</string>
    <string name="clear_all">CE</string>
    <string name="clear">C</string>
    <string name="values">%1$s%2$s</string>
    <string name="answer">%1$f</string>
</resources>
