<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.vibhanshu.calculatorapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/answer_field"
            android:layout_width="340dp"
            android:layout_height="75dp"
            android:layout_marginBottom="30dp"
            android:textSize="50sp"
            android:textStyle="italic"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button7"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/seven"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/eight"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/nine"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/add"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/four"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/five"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/six"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_sub"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/sub"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/one"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/two"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/three"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_mul"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/mul"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_dot"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/dot"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/zero"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_eq"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/eq"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_div"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/div"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_clearAll"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/clear_all"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:text="@string/clear"
            android:textSize="40sp"/>

    </LinearLayout>

</LinearLayout>
